k8s/cilium/hubble-route.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  parentRefs:
    - name: private-gateway
      namespace: default
      sectionName: hubble-https
  hostnames:
    - hubble.internal.rayq.app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
      - name: hubble-ui
        port: 80
